--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Flow</title>
+<!-- Google font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/design.css">
 </head>
-<body>
-    
+<body class="inter-normal">
+    <div class="banner">
+        <nav class="nav-banner">
+            <p class="nav-text">LOGO</p>
+            <button class="btn-style">Sign Up</button>
+        </nav>
+        <div class="banner-content">
+            <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+            <button class="btn-style">Stay Focused</button>
+        </div>
+    </div>
 </body>
 </html>
