added productive users and review section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,176 @@
     <link rel="stylesheet" href="styles/design.css">
 </head>
 <body class="inter-normal">
-    <div class="banner">
-        <nav class="nav-banner">
-            <p class="nav-text">LOGO</p>
-            <button class="btn-style">Sign Up</button>
-        </nav>
-        <div class="banner-content">
-            <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
-            <button class="btn-style">Stay Focused</button>
+    <header>
+        <div class="banner">
+            <nav class="nav-banner">
+                <p>LOGO</p>
+                <button class="btn-style">Sign Up</button>
+            </nav>
+            <div class="banner-content">
+                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <button class="btn-style">Stay Focused</button>
+            </div>
         </div>
-    </div>
+    </header>
+    <main>
+        <div class="action-section">
+            <div class="action-content">
+                <div class="action-text">
+                    <h1 class="action-title">See It in Action</h1>
+                    <p class="action-subtitle">Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <button class="btn-style">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img class="action-img" src="Assets/wc-mini.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="productive-users-section">
+            <div class="productive-users">
+                <div class="productive-users-title">
+                    <h1>Joined Thousands of Productive Users</h1>
+                </div>
+                <div class="productive-users-subtitles">
+                    <div>
+                        <h2>50K</h2>
+                        <p>Active Users</p>
+                    </div>
+                    <div>
+                        <h2>2M+</h2>
+                        <p>Focus Sessions</p>
+                    </div>
+                    <div>
+                        <h2>95%</h2>
+                        <p>Satisfaction Rate</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="users-feedback-section">
+            <div class="feedback-section">
+                <div class="feedback-title">
+                    <h1>What our users say</h1>
+                </div>
+                <div class="feedback-card">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="Assets/icon-star.png" alt="icon1">
+                            <img src="Assets/icon-star.png" alt="icon2">
+                            <img src="Assets/icon-star.png" alt="icon3">
+                            <img src="Assets/icon-star.png" alt="icon4">
+                            <img src="Assets/icon-star.png" alt="icon5">
+                        </div>
+                        <div class="card-text">
+                            <h3>Loved by Designers</h3>
+                            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        </div>
+                        <div class="card-reviewer-section">
+                            <div class="reviewer-img">
+                                <img src="Assets/avatar.png" alt="reviewer">
+                            </div>
+                            <div class="reviewer-text">
+                                <h5>Reviewer name</h5>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="Assets/icon-star.png" alt="icon1">
+                            <img src="Assets/icon-star.png" alt="icon2">
+                            <img src="Assets/icon-star.png" alt="icon3">
+                            <img src="Assets/icon-star.png" alt="icon4">
+                            <img src="Assets/icon-star.png" alt="icon5">
+                        </div>
+                        <div class="card-text">
+                            <h3>Loved by Designers</h3>
+                            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        </div>
+                        <div class="card-reviewer-section">
+                            <div class="reviewer-img">
+                                <img src="Assets/avatar.png" alt="reviewer">
+                            </div>
+                            <div class="reviewer-text">
+                                <h5>Reviewer name</h5>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="Assets/icon-star.png" alt="icon1">
+                            <img src="Assets/icon-star.png" alt="icon2">
+                            <img src="Assets/icon-star.png" alt="icon3">
+                            <img src="Assets/icon-star.png" alt="icon4">
+                            <img src="Assets/icon-star.png" alt="icon5">
+                        </div>
+                        <div class="card-text">
+                            <h3>Loved by Designers</h3>
+                            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                        </div>
+                        <div class="card-reviewer-section">
+                            <div class="reviewer-img">
+                                <img src="Assets/avatar.png" alt="reviewer">
+                            </div>
+                            <div class="reviewer-text">
+                                <h5>Reviewer name</h5>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="focus-section">
+            <div class="focus-content">
+                <div class="focus-text">
+                    <h1>Ready to focus better</h1>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <button class="btn-style">Get Started Free</button>
+                </div>
+                <div>
+                    <img class="focus-image" src="Assets/wc-big.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="get-in-touch-section">
+            <div class="get-in-touch-content">
+                <div class="get-in-touch-title">
+                    <h1>Let's Get in Touch</h1>
+                </div>
+                <div>
+                    <form action="" class="get-in-touch-form">
+                        <label for="email">Email</label><br>
+                        <input type="email" placeholder=" example@email.com" name="email" id="email"><br>
+                        <label for="name">Name</label><br>
+                        <input type="text" placeholder=" full name" name="name" id="name"><br>
+                        <label for="message">Message</label><br>
+                        <textarea placeholder="write your message..." name="message" id="message" cols="12" rows="5"></textarea>
+                        <br>
+                        <button class="btn-style touch-button">Get in Touch</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="logo-section">
+            <div class="logo-content">
+                <div class="logo-text">
+                    <h1>LOGO</h1>
+                    <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+                </div>
+                <div class="logo-link">
+                    <ul>
+                        <li><a href="" target="_blank">Home</a></li>
+                        <li><a href="" target="_blank">About</a></li>
+                        <li><a href="" target="_blank">How it Works</a></li>
+                        <li><a href="" target="_blank">Services</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
